Put discount in cache
