# src/schemas/dish_schemas.py
@@ -9,7 +9,6 @@ class DishInput(BaseModel):
     title: str
     description: str
     price: float
-    discount: int | None = None
 
 
 class DishOutput(BaseModel):
@@ -18,13 +17,11 @@ class DishOutput(BaseModel):
     title: str
     description: str
     price: float
-    discount: int
     submenu_id: UUID
 
     @field_serializer('price')
     def serialize_price(self, price: float) -> str:
-        """Конвертирует цену со скидкой в строку"""
-        price = self.price - (self.price * (self.discount / 100))
+        """Конвертирует цену в строку"""
         return str(price)
 
 
@@ -33,4 +30,3 @@ class DishUpdate(BaseModel):
     title: str | None = None
     description: str | None = None
     price: float | None = None
-    discount: int | None = None
